(fs) Native memory leak in WindowsNativeDispatcher.LookupPrivilegeValue0

XMLWordPrintable

    • b03
    • windows
    • Not verified

        Function LookupPrivilegeValue0() allocates a struct LUID with LocalAlloc(), and this memory is never released: Neither on successful path nor upon erroneous condition.

              Assignee:
              Ivan Gerasimov
              Reporter:
              Ivan Gerasimov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: