8207145: (fs) Native memory leak in WindowsNativeDispatcher.LookupPrivilegeValue0

Reviewed-by: alanb